--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
  "Config": [{
 
      "Name Bet Set": "Mining Chance 60 ‰",
-     "Base Bet": "0.000001",
+     "Base Bet": "0.00000003",
      "Max Bet": "OFF",
      "Chance": "60",
      "Random Chance": {
@@ -27,8 +27,8 @@
               "If Win": "3"
             }
         },
-     "If Win": "0.8",
-     "If Lose": "1.7",
+     "If Win": "1",
+     "If Lose": "1.3",
      "Reset If Win": "1",
      "Reset If Profit": "0.0000001",
      "Interval": "10"
